
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef size_t u32 ;
struct gfar_private {size_t* ftp_rqfcr; size_t* ftp_rqfpr; size_t cur_filer_idx; } ;


 size_t FPR_FILER_MASK ;
 size_t MAX_FILER_IDX ;
 size_t RQFCR_CMP_MATCH ;
 size_t RQFCR_CMP_NOMATCH ;
 int RQFPR_IPV4 ;
 int RQFPR_IPV6 ;
 int RQFPR_TCP ;
 int RQFPR_UDP ;
 size_t cluster_entry_per_class (struct gfar_private*,size_t,int) ;
 int gfar_write_filer (struct gfar_private*,int,size_t,size_t) ;

__attribute__((used)) static void gfar_init_filer_table(struct gfar_private *priv)
{
 int i = 0x0;
 u32 rqfar = MAX_FILER_IDX;
 u32 rqfcr = 0x0;
 u32 rqfpr = FPR_FILER_MASK;


 rqfcr = RQFCR_CMP_MATCH;
 priv->ftp_rqfcr[rqfar] = rqfcr;
 priv->ftp_rqfpr[rqfar] = rqfpr;
 gfar_write_filer(priv, rqfar, rqfcr, rqfpr);

 rqfar = cluster_entry_per_class(priv, rqfar, RQFPR_IPV6);
 rqfar = cluster_entry_per_class(priv, rqfar, RQFPR_IPV6 | RQFPR_UDP);
 rqfar = cluster_entry_per_class(priv, rqfar, RQFPR_IPV6 | RQFPR_TCP);
 rqfar = cluster_entry_per_class(priv, rqfar, RQFPR_IPV4);
 rqfar = cluster_entry_per_class(priv, rqfar, RQFPR_IPV4 | RQFPR_UDP);
 rqfar = cluster_entry_per_class(priv, rqfar, RQFPR_IPV4 | RQFPR_TCP);


 priv->cur_filer_idx = rqfar;


 rqfcr = RQFCR_CMP_NOMATCH;
 for (i = 0; i < rqfar; i++) {
  priv->ftp_rqfcr[i] = rqfcr;
  priv->ftp_rqfpr[i] = rqfpr;
  gfar_write_filer(priv, i, rqfcr, rqfpr);
 }
}
